<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Portfolio-Eva</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="logo">logo</string>
    <string name="hy_i_am_ndeye_awa_diop">Hy ! I am Ndeye Awa DIOP</string>
    <string name="todo1">TODO</string>
    <string name="profil">Profil</string>
    <string name="menu">Menu</string>
    <string name="voir_plus">voir plus</string>
    <string name="je_suis_developpeuse_web_et_mobile_vous_pouvez_voir_mes_projet_sur_github_ou_sur_mon_cv">Je suis Developpeuse web et mobile vous pouvez voir mes projet sur github ou sur mon CV</string>
    <string name="header">header</string>
</resources>