<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="309dp"
            android:layout_height="87dp"
            android:orientation="horizontal"
            android:layout_margin="30sp"
            tools:layout_editor_absoluteY="3dp"
            tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_marginTop="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icone_menu__1_"
                    android:contentDescription="@string/menu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="311dp"
            android:layout_height="467dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="154dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="221dp"
                    android:layout_height="252dp"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:contentDescription="@string/profil"
                    app:srcCompat="@drawable/img_4970" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30sp"
                    android:text="@string/hy_i_am_ndeye_awa_diop"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginEnd="50sp"
                    android:text="@string/voir_plus"

                    android:textColor="@color/white" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
